--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -7,7 +7,7 @@ tools:context=".MainActivity">
 
 <item
     android:id="@+id/action_settings"
-    android:title="@string/action_settings"
+    android:title="@string/title_activity_settings"
     android:orderInCategory="100"
     app:showAsAction="never" />
 
