--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -17,6 +17,6 @@
         android:key="@string/pref_unit_key"
         android:defaultValue="@string/pref_unit_default"
         android:entryValues="@array/pref_unit_values"
-        android:entries="@array/pref_unit_values" />
+        android:entries="@array/pref_unit_options" />
 
 </PreferenceScreen>
